--- a/StreetCar/StreetCar/CreateNetworkGame.ui
+++ b/StreetCar/StreetCar/CreateNetworkGame.ui
@@ -7,14 +7,23 @@
     <x>0</x>
     <y>0</y>
     <width>443</width>
-    <height>350</height>
+    <height>355</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -49,6 +58,9 @@ QRadioButton::hover{
       <string/>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetMinimumSize</enum>
+      </property>
       <property name="leftMargin">
        <number>40</number>
       </property>
