--- a/StreetCar/StreetCar/DeleteProfile.ui
+++ b/StreetCar/StreetCar/DeleteProfile.ui
@@ -14,7 +14,16 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -29,7 +38,7 @@
 }
 
 QPushButton {
-	background-color: rgba(255, 128, 255, 0);
+	background-color: rgba(255, 128, 0, 0);
 }
 
 QPushButton::hover{
@@ -41,6 +50,9 @@ QPushButton::hover{
       <string/>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetMinimumSize</enum>
+      </property>
       <property name="leftMargin">
        <number>40</number>
       </property>
