--- a/StreetCar/StreetCar/NewNetworkGame.ui
+++ b/StreetCar/StreetCar/NewNetworkGame.ui
@@ -119,7 +119,7 @@ QPushButton {
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="comboBox">
+         <widget class="QComboBox" name="comboServer">
           <property name="minimumSize">
            <size>
             <width>200</width>
@@ -214,6 +214,12 @@ QPushButton {
           <pointsize>12</pointsize>
          </font>
         </property>
+        <property name="selectionMode">
+         <enum>QAbstractItemView::SingleSelection</enum>
+        </property>
+        <property name="selectionBehavior">
+         <enum>QAbstractItemView::SelectRows</enum>
+        </property>
         <property name="columnCount">
          <number>2</number>
         </property>
@@ -260,7 +266,7 @@ QPushButton {
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="buttonNext">
+         <widget class="QPushButton" name="buttonChoose">
           <property name="font">
            <font>
             <family>Serif</family>
@@ -268,7 +274,7 @@ QPushButton {
            </font>
           </property>
           <property name="text">
-           <string>Suivant</string>
+           <string>Choisir</string>
           </property>
          </widget>
         </item>
