--- a/StreetCar/StreetCar/OptionsMenu.ui
+++ b/StreetCar/StreetCar/OptionsMenu.ui
@@ -14,16 +14,19 @@
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">#groupBox {
-	border-image: url(:/images/menu_fond);
-}
-
-QPushButton {
-	background-color: rgba(255, 255, 255, 0);
-}</string>
+   <string notr="true"/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -38,11 +41,12 @@ QPushButton {
 }
 
 QPushButton {
-	background-color: rgba(255, 255, 255, 0);
+	background-color: rgba(255, 128, 0, 0);
 }
 
-QPushButton:hover {
-	background-color:rgba(255, 0, 0, 50);
+QPushButton::hover{
+	background-color: rgba(255, 0, 0, 100);
+	font-weight: bold;
 }</string>
      </property>
      <property name="title">
