--- a/StreetCar/StreetCar/ProfilMenu.ui
+++ b/StreetCar/StreetCar/ProfilMenu.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>315</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,8 +38,14 @@
 }
 
 QPushButton {
-	background-color: rgba(255, 255, 255, 0);
-}</string>
+	background-color: rgba(255, 128, 0, 50);
+}
+
+QPushButton::hover{
+	background-color: rgba(255, 0, 0, 100);
+	font-weight: bold;
+}
+</string>
      </property>
      <property name="title">
       <string/>
@@ -142,6 +148,9 @@ QPushButton {
           <property name="styleSheet">
            <string notr="true">#groupBoxProfile{
 	background-color: rgba(255,128, 0, 100);
+}
+QLineEdit {
+	background-color: rgba(255,255, 0, 50);
 }
 </string>
           </property>
