--- a/StreetCar/StreetCar/MainWindow.ui
+++ b/StreetCar/StreetCar/MainWindow.ui
@@ -45,10 +45,16 @@
         </item>
         <item>
          <widget class="QLabel" name="label">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="minimumSize">
            <size>
             <width>1000</width>
-            <height>100</height>
+            <height>50</height>
            </size>
           </property>
           <property name="maximumSize">
