--- a/StreetCar/StreetCar/NewLocalGame.ui
+++ b/StreetCar/StreetCar/NewLocalGame.ui
@@ -14,7 +14,20 @@
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">QMessageBox {
+	background-color: rgba(255, 220, 0, 255);
+	font-family:serif;
+   font-size: 16px;	
+}
+
+QMessageBox QPushButton {
+	background-color: rgba(255, 128, 0, 50);
+}
+
+QMessageBox QPushButton::hover{
+	background-color: rgba(255, 0, 0, 100);
+	font-weight: bold;
+}</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="leftMargin">
@@ -38,6 +51,14 @@
 
 #label {
 	color: orange;
+}
+
+QTableWidget {
+	background-color: rgba(255, 200, 0, 100);
+}
+
+horizontalHeader {
+	background-color: rgba(255, 200, 0, 255);
 }
 
 QPushButton {
@@ -231,11 +252,14 @@ QPushButton::hover{
                  <height>0</height>
                 </size>
                </property>
+               <property name="showGrid">
+                <bool>false</bool>
+               </property>
                <property name="rowCount">
                 <number>5</number>
                </property>
                <property name="columnCount">
-                <number>3</number>
+                <number>4</number>
                </property>
                <attribute name="horizontalHeaderVisible">
                 <bool>true</bool>
@@ -271,7 +295,16 @@ QPushButton::hover{
                  <font>
                   <family>Serif</family>
                   <pointsize>12</pointsize>
+                  <weight>75</weight>
+                  <bold>true</bold>
                  </font>
+                </property>
+                <property name="background">
+                 <color>
+                  <red>255</red>
+                  <green>150</green>
+                  <blue>0</blue>
+                 </color>
                 </property>
                </column>
                <column>
@@ -282,7 +315,16 @@ QPushButton::hover{
                  <font>
                   <family>Serif</family>
                   <pointsize>12</pointsize>
+                  <weight>75</weight>
+                  <bold>true</bold>
                  </font>
+                </property>
+                <property name="background">
+                 <color>
+                  <red>255</red>
+                  <green>150</green>
+                  <blue>0</blue>
+                 </color>
                 </property>
                </column>
                <column>
@@ -293,7 +335,28 @@ QPushButton::hover{
                  <font>
                   <family>Serif</family>
                   <pointsize>12</pointsize>
+                  <weight>75</weight>
+                  <bold>true</bold>
                  </font>
+                </property>
+                <property name="background">
+                 <color>
+                  <red>255</red>
+                  <green>150</green>
+                  <blue>0</blue>
+                 </color>
+                </property>
+               </column>
+               <column>
+                <property name="text">
+                 <string/>
+                </property>
+                <property name="background">
+                 <color>
+                  <red>255</red>
+                  <green>150</green>
+                  <blue>0</blue>
+                 </color>
                 </property>
                </column>
                <item row="0" column="1">
@@ -317,19 +380,6 @@ QPushButton::hover{
             </layout>
            </widget>
           </item>
-          <item>
-           <spacer name="verticalSpacer_4">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
          </layout>
         </item>
         <item>
@@ -346,6 +396,19 @@ QPushButton::hover{
          </spacer>
         </item>
        </layout>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_4">
