--- a/StreetCar/StreetCar/RulesOption.ui
+++ b/StreetCar/StreetCar/RulesOption.ui
@@ -17,7 +17,16 @@
    <string notr="true"/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -31,8 +40,12 @@
 	color: orange;
 }
 
+#plainTextEdit {
+	background-color: rgba(255, 128, 0, 50);
+}
+s
 QPushButton {
-	background-color: rgba(255, 255, 255, 0);
+	background-color: rgba(255, 128, 0, 50);
 }
 
 QPushButton::hover{
@@ -100,7 +113,18 @@ QPushButton::hover{
        </layout>
       </item>
       <item>
-       <widget class="QListView" name="listView"/>
+       <widget class="QPlainTextEdit" name="plainTextEdit">
+        <property name="font">
+         <font>
+          <family>Serif</family>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="plainText">
+         <string>Streetcar est un jeu de construction de voies et de course de tramways à travers la Nouvelle-Orléans.
+Chaque joueur construit une route pour son tramway passant par deux ou trois stations. Une fois que sa route est terminée, le joueur peut commencer son voyage inaugural. Le premier qui termine la construction de sa route et qui finit son voyage inaugural gagne la partie</string>
+        </property>
+       </widget>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
