--- a/StreetCar/StreetCar/DescriptionPlayersNetwork.ui
+++ b/StreetCar/StreetCar/DescriptionPlayersNetwork.ui
@@ -14,16 +14,7 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
+   <property name="margin">
     <number>0</number>
    </property>
    <item>
@@ -127,6 +118,12 @@ QPushButton::hover{
              <property name="enabled">
               <bool>true</bool>
              </property>
+             <property name="font">
+              <font>
+               <family>Serif</family>
+               <pointsize>12</pointsize>
+              </font>
+             </property>
              <property name="lineWidth">
               <number>1</number>
              </property>
@@ -140,8 +137,11 @@ QPushButton::hover{
               </size>
              </property>
              <property name="columnCount">
-              <number>2</number>
+              <number>3</number>
              </property>
+             <attribute name="horizontalHeaderVisible">
+              <bool>false</bool>
+             </attribute>
              <attribute name="verticalHeaderVisible">
               <bool>false</bool>
              </attribute>
@@ -149,10 +149,52 @@ QPushButton::hover{
               <property name="text">
                <string>Nom</string>
               </property>
+              <property name="font">
+               <font>
+                <family>Serif</family>
+                <pointsize>12</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="background">
+               <color>
+                <red>255</red>
+                <green>150</green>
+                <blue>0</blue>
+               </color>
+              </property>
              </column>
              <column>
               <property name="text">
                <string>Avatar</string>
+              </property>
+              <property name="font">
+               <font>
+                <family>Serif</family>
+                <pointsize>12</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="background">
+               <color>
+                <red>255</red>
+                <green>150</green>
+                <blue>0</blue>
+               </color>
+              </property>
+             </column>
+             <column>
+              <property name="text">
+               <string/>
+              </property>
+              <property name="background">
+               <color>
+                <red>255</red>
+                <green>150</green>
+                <blue>0</blue>
+               </color>
               </property>
              </column>
             </widget>
